--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,5 @@
-FROM node:20-alpine
+# backend/Dockerfile
+FROM node:20-bullseye
 
 WORKDIR /app
 
@@ -6,11 +7,10 @@ COPY package*.json ./
 RUN npm install
 
 COPY . .
-
-ENV NODE_ENV=production
-
 RUN npm run build
 
-EXPOSE 1337
+ENV NODE_ENV=production
+ENV NODE_OPTIONS="--max-old-space-size=2048"
 
+EXPOSE 1337
 CMD ["npm", "run", "start"]
