--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,22 +1,38 @@
 version: "3.9"
-
 services:
+  frontend:
+    build:
+      context: ./frontend
+    container_name: easyfest-frontend
+    restart: unless-stopped
+    networks:
+      - easyfest_default
+    expose:
+      - "3000"  # SSR port
+
   backend:
-    build: ./backend
+    image: easyfest_backend
     container_name: easyfest-backend
-    env_file:
-      - ./backend/.env
-    volumes:
-      - ./data:/app/.tmp
+    restart: unless-stopped
+    networks:
+      - easyfest_default
     ports:
       - "1337:1337"
-    restart: unless-stopped
 
-  frontend:
-    build: ./frontend
-    container_name: easyfest-frontend
+  nginx:
+    image: nginx:alpine
+    container_name: easyfest-nginx
+    restart: unless-stopped
     ports:
       - "80:80"
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
     depends_on:
+      - frontend
       - backend
-    restart: unless-stopped
+    networks:
+      - easyfest_default
+
+networks:
+  easyfest_default:
+    external: true
