--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,9 +2,9 @@
 	"name": "frontend",
 	"version": "0.0.1",
 	"private": true,
-		"engines": {
-			"node": ">=22.16.0 <23.0.0"
-		},
+	"engines": {
+		"node": ">=22.16.0 <23.0.0"
+	},
 	"scripts": {
 		"sync-penpot": "penpot-export",
 		"dev": "vite dev",
@@ -16,7 +16,9 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
+		"@inlang/paraglide-js": "1.11.3",
 		"@sveltejs/adapter-node": "^5.2.10",
+		"@sveltejs/adapter-static": "^3.0.10",
 		"@sveltejs/kit": "^2.12.1",
 		"@types/qs": "^6.9.17",
 		"@typescript-eslint/eslint-plugin": "^5.62.0",
@@ -35,19 +37,18 @@
 		"tslib": "^2.6.2",
 		"typescript": "^5.5.0",
 		"vite": "^6.0.0",
-		"zod": "^3.22.4",
-		"@inlang/paraglide-js": "1.11.3"
+		"zod": "^3.22.4"
 	},
 	"type": "module",
 	"dependencies": {
 		"@humanspeak/svelte-markdown": "^0.6.1",
+		"@inlang/paraglide-sveltekit": "0.15.0",
 		"@penpot-export/cli": "^0.1.2",
 		"axios": "^1.6.2",
 		"bulma-list": "https://github.com/hirunatan/bulma-list.git#prevent-build",
 		"dotenv": "^16.3.1",
 		"qs": "^6.11.2",
 		"svelte-modals": "^2.0.0",
-		"underscore": "^1.13.6",
-		"@inlang/paraglide-sveltekit": "0.15.0"
+		"underscore": "^1.13.6"
 	}
 }
