--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,23 +1,20 @@
 server {
     listen 80;
 
-    # Frontend
     location / {
-        proxy_pass http://frontend:80;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
+        root /usr/share/nginx/html;
+        index index.html;
+        try_files $uri $uri/ /index.html;
     }
 
-    # Backend API
     location /api {
-        proxy_pass http://backend:1337/api;
+        proxy_pass http://backend:1337;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
 
-    # Strapi Admin
     location /admin {
-        proxy_pass http://backend:1337/admin;
+        proxy_pass http://backend:1337;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
