--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,17 +1,19 @@
 version: "3.9"
 services:
+
   frontend:
     build:
       context: ./frontend
     container_name: easyfest-frontend
     restart: unless-stopped
+    volumes:
+      - frontend_build:/app/build
     networks:
       - easyfest_default
-    expose:
-      - "3000"  # SSR port
 
   backend:
-    image: easyfest_backend
+    build:
+      context: ./backend
     container_name: easyfest-backend
     restart: unless-stopped
     networks:
@@ -27,6 +29,7 @@ services:
       - "80:80"
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+      - frontend_build:/usr/share/nginx/html:ro
     depends_on:
       - frontend
       - backend
@@ -36,3 +39,6 @@ services:
 networks:
   easyfest_default:
     external: true
+
+volumes:
+  frontend_build:
