--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,21 +1,34 @@
 server {
     listen 80;
+    server_name _;
 
+    # CSP headers
+    add_header Content-Security-Policy "
+        default-src 'self';
+        script-src 'self' 'unsafe-eval' 'unsafe-inline';
+        style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
+        img-src 'self' data: blob:;
+        font-src 'self' data: https://fonts.gstatic.com;
+        connect-src 'self' http: https: ws: wss:;
+        frame-src 'self';
+    " always;
+
+    # Serve static frontend
     location / {
         root /usr/share/nginx/html;
-        index index.html;
         try_files $uri $uri/ /index.html;
     }
 
-    location /api {
-        proxy_pass http://backend:1337;
+    # Strapi
+    location /strapi/ {
+        proxy_pass http://easyfest-backend:1337/;
+        proxy_http_version 1.1;
         proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-    }
-
-    location /admin {
-        proxy_pass http://backend:1337;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_buffering off;
+        proxy_request_buffering off;
     }
 }
