--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,5 +1,5 @@
 
-FROM node:22.16-bullseye as build
+FROM node:22.16-bullseye
 
 WORKDIR /app
 COPY package*.json ./
@@ -7,7 +7,6 @@ RUN npm install
 COPY . .
 RUN npm run build
 
-FROM nginx:alpine
-COPY --from=build /app/build /usr/share/nginx/html
-EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+EXPOSE 3000
+
+CMD ["node", "build/index.js"]
