--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -13,10 +13,16 @@ server {
         frame-src 'self';
     " always;
 
-    # Serve static frontend
+    # Frontend SSR
     location / {
-        root /usr/share/nginx/html;
-        try_files $uri $uri/ /index.html;
+        proxy_pass http://easyfest-frontend:3000;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
     }
 
     # Strapi
