--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,8 +6,11 @@ services:
       - ./backend/.env
     volumes:
       - ./data:/app/.tmp
+      - ./backend/public/uploads:/app/public/uploads
     expose:
       - "1337"
+    ports:
+      - "1337:1337"
     restart: unless-stopped
 
   frontend:
@@ -15,8 +18,6 @@ services:
     container_name: easyfest-frontend
     expose:
       - "3000"
-    depends_on:
-      - backend
 
   nginx:
     image: nginx:alpine
@@ -25,7 +26,5 @@ services:
       - "80:80"
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
-    depends_on:
-      - frontend
-      - backend
+
     restart: unless-stopped
