--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,17 +1,10 @@
 server {
+    client_max_body_size 100M;    
     listen 80;
     server_name _;
 
     # CSP headers
-    add_header Content-Security-Policy "
-        default-src 'self';
-        script-src 'self' 'unsafe-eval' 'unsafe-inline';
-        style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
-        img-src 'self' data: blob:;
-        font-src 'self' data: https://fonts.gstatic.com;
-        connect-src 'self' http: https: ws: wss:;
-        frame-src 'self';
-    " always;
+    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-eval' 'unsafe-inline'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; img-src 'self' data: blob:; font-src 'self' data: https://fonts.gstatic.com; connect-src 'self' http: https: ws: wss:; frame-src 'self';" always;
 
     # Frontend SSR
     location / {
@@ -34,6 +27,7 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
+        proxy_pass_request_headers on;
         proxy_buffering off;
         proxy_request_buffering off;
     }
